--- a/src/components/Products/MoreProducts.astro
+++ b/src/components/Products/MoreProducts.astro
@@ -2,9 +2,7 @@
 import { Accordion, AccordionItem } from 'accessible-astro-components';
 import { Image } from 'astro:assets';
 
-const {
-    moreproducts
-} = Astro.props;
+const { moreproducts } = Astro.props;
 ---
 <div class="more-products-bg">
     <div class="more-products-container">
