--- a/src/components/ContactUs/ContactUsForm.astro
+++ b/src/components/ContactUs/ContactUsForm.astro
@@ -1,13 +1,5 @@
 ---
-
-const {
-    FullName,
-    Email,
-    Phone,
-    Message,
-    sendmessageBtn,
-} = Astro.props;
-
+const { formDetails } = Astro.props;
 ---
 
 <div class="form-card">
@@ -21,9 +13,9 @@ const {
     >
     <input type="hidden" name="_template" value="table">
         <div>
-            <label for={FullName}>{FullName} <span class="form-symbol">*</span></label>
+            <label for={formDetails.FullName}>{formDetails.FullName} <span class="form-symbol">*</span></label>
             <input
-                id={FullName}
+                id={formDetails.FullName}
                 type="text"
                 name="name"
                 placeholder="Enter your full name here."
@@ -31,12 +23,12 @@ const {
            <p id="name_errormsg"></p>
         </div>
         <div>
-            <label for="phone" class="label">{Phone}<span class="form-symbol"> *</span></label>
+            <label for="phone" class="label">{formDetails.Phone}<span class="form-symbol"> *</span></label>
             <input id="phone" type="number" name="phone" placeholder="Enter your phone number here."/>
             <p id="phone_errormsg"></p>
         </div>
         <div>
-            <label for={Email}>{Email}</label>
+            <label for={formDetails.Email}>{formDetails.Email}</label>
             <input
                 id="email"
                 name="email"
@@ -45,15 +37,15 @@ const {
             <p id="email_errormsg"></p>
         </div>
         <div>
-            <label for={Message}>{Message} <span class="form-symbol">*</span></label>
+            <label for={formDetails.Message}>{formDetails.Message} <span class="form-symbol">*</span></label>
             <textarea
-                id={Message}
+                id={formDetails.Message}
                 name="message"
                 class="message-box"
                 placeholder="Enter your message here."></textarea>
             <p id="message_errormsg"></p>
         </div>
-        <input type="submit" value={sendmessageBtn} class="submit-btn" />
+        <input type="submit" value={formDetails.sendmessageBtn} class="submit-btn" />
     </form>
 
 </div>
