--- a/src/components/HomePage/OnlineBased.astro
+++ b/src/components/HomePage/OnlineBased.astro
@@ -1,25 +1,19 @@
 ---
 import { Image } from "astro:assets";
-const {
-    onlineBasedHeader,
-    onlineBasedImage,
-    onlineBasedText,
-    onlineBasedBtn,
-    onlineBasedAltText,
-} = Astro.props;
+const { homeOnlineBased } = Astro.props;
 ---
 
 <section class="online-services container">
     <div class="service-container">
         <Image
-            src={onlineBasedImage}
-            alt={onlineBasedAltText}
+            src={homeOnlineBased.onlineBasedImage.url}
+            alt={homeOnlineBased.onlineBasedImage.alternativeText}
             inferSize={true}
         />
         <div class="online-card">
-            <h2>{onlineBasedHeader}</h2>
-            <p>{onlineBasedText}</p>
-            <a href="/online-services">{onlineBasedBtn}</a>
+            <h2>{homeOnlineBased.onlineBasedHeader}</h2>
+            <p>{homeOnlineBased.onlineBasedText}</p>
+            <a href="/online-services">{homeOnlineBased.onlineBasedBtn}</a>
         </div>
     </div>
 </section>
