--- a/src/components/LinerlessLabel/WhatIs.astro
+++ b/src/components/LinerlessLabel/WhatIs.astro
@@ -1,41 +1,30 @@
 ---
 import { Image } from "astro:assets";
-const {
-    linerlesslabelWhatIsTitle,
-    linerlesslabelWhatIsDesc,
-    perfectforwindowText,
-    printedmanufactureText,
-    linerlesslabelImage1,
-    linerlesslabelAltText1,
-    linerlesslabelImage2,
-    linerlesslabelAltText2,
-    linerlesslabelImage3,
-    linerlesslabelAltText3,
-} = Astro.props;
+const { productWhatIs } = Astro.props;
 import "../../styles/styles.scss";
 ---
 
 <div class="featured-products-container">
     <div class="featured-products-info">
-        <h2>{linerlesslabelWhatIsTitle}</h2>
-        <p>{linerlesslabelWhatIsDesc}</p>
-        <p class="middle-text">{perfectforwindowText}</p>
-        <p>{printedmanufactureText}</p>
+        <h2>{productWhatIs.linerlesslabelWhatIsTitle}</h2>
+        <p>{productWhatIs.linerlesslabelWhatIsDesc}</p>
+        <p class="middle-text">{productWhatIs.perfectforwindowText}</p>
+        <p>{productWhatIs.printedmanufactureText}</p>
     </div>
     <div class="linerless-img">
         <Image
-            src={linerlesslabelImage1}
-            alt={linerlesslabelAltText1}
+            src={productWhatIs.linerlesslabelImage1.url}
+            alt={productWhatIs.linerlesslabelImage1.alternativeText}
             inferSize={true}
         />
         <Image
-            src={linerlesslabelImage2}
-            alt={linerlesslabelAltText2}
+            src={productWhatIs.linerlesslabelImage2.url}
+            alt={productWhatIs.linerlesslabelImage2.alternativeText}
             inferSize={true}
         />
         <Image
-            src={linerlesslabelImage3}
-            alt={linerlesslabelAltText3}
+            src={productWhatIs.linerlesslabelImage3.url}
+            alt={productWhatIs.linerlesslabelImage3.alternativeText}
             inferSize={true}
         />
     </div>
