--- a/src/components/RequestQuote/RequestQuoteForm.astro
+++ b/src/components/RequestQuote/RequestQuoteForm.astro
@@ -1,15 +1,5 @@
 ---
-const {
-    FullName,
-    Email,
-    Phone,
-    CompanyName,
-    ProductType,
-    Quantity,
-    FileUpload,
-    AdditionalDetails,
-    requestquoteBtn,
-} = Astro.props;
+const { formDetails } = Astro.props;
 ---
 
 <div class="form-card">
@@ -27,9 +17,9 @@ const {
     <!-- Template type -->
     <input type="hidden" name="_template" value="table">
         <div>
-            <label for={FullName}>{FullName} <span class="form-symbol">*</span></label>
+            <label for={formDetails.FullName}>{formDetails.FullName} <span class="form-symbol">*</span></label>
             <input
-                id={FullName}
+                id={formDetails.FullName}
                 type="text"
                 name="name"
                 placeholder="Enter your full name here."
@@ -37,7 +27,7 @@ const {
             <p id="name_errormsg"></p>
         </div>
         <div>
-            <label for="phone">{Phone} <span class="form-symbol">*</span></label>
+            <label for="phone">{formDetails.Phone} <span class="form-symbol">*</span></label>
             <input
                 id="phone"
                 type="number"
@@ -47,7 +37,7 @@ const {
             <p id="phone_errormsg"></p>
         </div>
         <div>
-            <label for={Email}>{Email}</label>
+            <label for={formDetails.Email}>{formDetails.Email}</label>
             <input
                 id="email"
                 name="email"
@@ -56,9 +46,9 @@ const {
             <p id="email_errormsg"></p>
         </div>
         <div>
-            <label for={CompanyName}>{CompanyName}</label>
+            <label for={formDetails.CompanyName}>{formDetails.CompanyName}</label>
             <input
-                id={CompanyName}
+                id={formDetails.CompanyName}
                 type="text"
                 name="company"
                 placeholder="Enter your company name here."
@@ -67,7 +57,7 @@ const {
         <div class="product-type-quantity">
             
             <div>
-                <label for="product-type">{ProductType} <span class="form-symbol">*</span></label>
+                <label for="product-type">{formDetails.ProductType} <span class="form-symbol">*</span></label>
                 <select name="product_type" id="product-type">
                     <option value="">Choose a product</option>
                     <option value="Linerless Label">Linerless Label</option>
@@ -82,17 +72,9 @@ const {
                 <p id="subject_errormsg"></p>
             </div>
             <div>
-                <label for="quantity">{Quantity} <span class="form-symbol">*</span></label>
-                <!-- <select name="quantity" id="quantity"> 
-                    <option value="">Select Quantity</option>
-                    <option value="10">10</option>
-                    <option value="50">50</option>
-                    <option value="100">100</option>
-                    <option value="1000">1000</option>
-                </select>
-                -->
-                   <input
-                id={Quantity}
+                <label for="quantity">{formDetails.Quantity} <span class="form-symbol">*</span></label>
+                <input
+                id={formDetails.Quantity}
                 type="number"
                 name="quantity"
                 placeholder="Enter your quantity here."
@@ -101,9 +83,9 @@ const {
             </div>
         </div>
         <div>
-            <label class="label-upload" for={FileUpload}>{FileUpload}</label>
+            <label class="label-upload" for={formDetails.FileUpload}>{formDetails.FileUpload}</label>
             <input
-                id={FileUpload}
+                id={formDetails.FileUpload}
                 class="file-upload"
                 type="file"
                 name="attachment"
@@ -112,15 +94,15 @@ const {
             <p class="upload-p">Upload a file up to 5MB.</p>
         </div>
         <div>
-            <label for={AdditionalDetails}>{AdditionalDetails} <span class="form-symbol">*</span></label>
+            <label for={formDetails.AdditionalDetails}>{formDetails.AdditionalDetails} <span class="form-symbol">*</span></label>
             <textarea
-                id={AdditionalDetails}
+                id={formDetails.AdditionalDetails}
                 name="message"
                 class="message-box"
                 placeholder="Enter additional details here. Examples include sizes, materials, colours, specifications, questions, and details from file uploads."></textarea>
             <p id="message_errormsg"></p>
         </div>
-        <input type="submit" value={requestquoteBtn} class="submit-btn" />
+        <input type="submit" value={formDetails.requestquoteBtn} class="submit-btn" />
     </form>
 </div>
 
