--- a/src/pages/request-quote.astro
+++ b/src/pages/request-quote.astro
@@ -6,7 +6,6 @@ import Layout from "../layouts/Layout.astro";
 import fetchApi from "../lib/strapi";
 
 
-
 const pages = await fetchApi({
   endpoint: 'request-quotes', 
   page: 'RequestQuotePage',
@@ -15,16 +14,12 @@ const pages = await fetchApi({
 
 // http://localhost:1337/api/request-quotes?populate[RequestQuotePage][populate]=*
 
-//fetch page data for about us page
 const requestquotePage = pages[0];
 const pageData = requestquotePage?.RequestQuotePage || [];
 
-// fetch about us hero components
 const heroData = pageData.find(pd => pd.__component === "requestquotehero.requestquote-hero") || {};
-const {requestquoteHeader, requestquoteText, requestquotePhone, requestquoteEmail} = heroData;
 
 const requestquoteFormData = pageData.find(pd => pd.__component === "requestquoteform.requestquote-form") || {};
-const {Subject, FullName, Email, Phone, CompanyName, ProductType, Quantity, FileUpload, AdditionalDetails, requestquoteBtn} = requestquoteFormData;
 
 const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
 ---
@@ -35,8 +30,8 @@ const seoPageData = pageData.find(pd => pd.__component === "shared.seo") || {};
   </div>
    <div class="background-form">
     <div class="forms-page-wrapper">
-      <Hero {requestquoteHeader} {requestquoteText} {requestquotePhone} {requestquoteEmail}  />
-      <RequestQuoteForm {Subject} {FullName} {Email} {Phone} {CompanyName} {ProductType} {Quantity} {FileUpload} {AdditionalDetails} {requestquoteBtn} />
+      <Hero requestQuoteHero={heroData} />
+      <RequestQuoteForm formDetails={requestquoteFormData} />
     </div>
    </div>
 </Layout>
